<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/withdraw"
            android:textColor="@color/black"
            android:text="@string/yue"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red5"
            android:textSize="@dimen/withdraw"
            android:text="9999"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/withdraw"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:text="@string/name"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/shoukuanren"
            android:textSize="15sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/withdraw"
            android:layout_marginLeft="10dp"
            android:text="@string/car_account"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/card_num"
            android:textSize="15sp"
            android:inputType="number"
            android:background="@null"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/withdraw"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/bank"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:background="@null"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/withdraw"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/withdraw_yue"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:background="@null"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/withdraw"
        android:background="@drawable/selector_btn_blue"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/confirm"/>


</LinearLayout>