<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/share_num"
        android:drawableLeft="@mipmap/icon_hongbao_nor"
        android:hint="@string/input_monry"
        style="@style/sharePlan_editext"
        />

    <EditText
        android:id="@+id/share_account"
        android:drawableLeft="@mipmap/icon_zhanghu_nor"
        android:hint="@string/input_account"
        style="@style/sharePlan_editext" />

    <Button
        android:id="@+id/share_send"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="@dimen/big"
        android:background="@drawable/selector_btn_blue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:background="@color/gray2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendHistory"
            android:layout_margin="15dp"/>
        <ListView
            android:id="@+id/share_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>
    </LinearLayout>
</LinearLayout>