<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smapley.lottery.fragment.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/ad_01" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonLinHeight">

            <Button
                android:id="@+id/main_chose"
                style="@style/user_btn"
                android:drawableTop="@drawable/selector_chose"
                android:text="@string/chose" />

            <Button
                android:id="@+id/main_table"
                style="@style/user_btn"
                android:drawableTop="@drawable/selector_table"
                android:text="@string/table" />

            <Button
                android:id="@+id/main_plan"
                style="@style/user_btn"
                android:drawableTop="@drawable/selector_plan"
                android:text="@string/plan" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/main_name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shuangseqiu" />

            <TextView
                android:id="@+id/main_periods1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/main_name1"
                android:text="第2017010期"
                android:layout_alignBottom="@+id/main_name1"
                android:textSize="@dimen/small"/>

            <TextView
                android:id="@+id/main_date1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="2017-01-22 21：51"
                android:layout_alignBottom="@+id/main_name1"
                android:textSize="@dimen/small"/>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
